--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,20 +1,37 @@
-name: Jekyll site CI
-
+name: GitHub Page CI
 on:
+  workflow_dispatch:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: ["master"]
+
+permissions:
+  pages: write
+  id-token: write
 
 jobs:
-  build:
-
+  deploy-page:
+    environment:
+      name: github-pages-workflow
+      url: ${{ steps.deployment.outputs.page_url }}
+    
     runs-on: ubuntu-latest
-
+    
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the site in the jekyll/builder container
-      run: |
-        docker run \
-        -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Setup
+        uses: actions/configure-pages@v3
+
+      - name: Upload Artifacts
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: "."
+
+      - name: Display Name
+        run: echo "Denys Koza"
+
+      - name: Deploy GitHub Page
+        id: deployment
+        uses: actions/deploy-pages@v1
+
