--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -29,7 +29,7 @@ jobs:
           path: "."
 
       - name: Display Name
-        run: echo "Denys Koza"
+        run: echo "Draguca Roman"
 
       - name: Deploy GitHub Page
         id: deployment
